feat: add linters and formatters along with pre-commit hooks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,73 @@ pyspark = "^3.5.1"
 psutil = "^5.9.8"
 
 
+[tool.poetry.group.dev]
+optional = true
+
+[tool.poetry.group.dev.dependencies]
+black = "^23.9.1"
+interrogate = "^1.5.0"
+mypy = "^1.6.0"
+nox = "^2023.4.22"
+pre-commit = "^3.4.0"
+pre-commit-hooks = "^4.5.0"
+ruff = "^0.0.292"
+
+
+[tool.ruff]
+extend-exclude = [".airflowignore", "__pycache__"]
+extend-select = ["AIR", "B", "D", "I", "N", "PL", "Q"]
+fix = true
+fixable = ["ALL"]
+ignore = ["D100", "D104", "D2", "D4"]
+line-length = 88
+output-format = "grouped"
+show-fixes = true
+show-source = true
+target-version = "py310"
+unfixable = []
+
+[tool.ruff.pycodestyle]
+ignore-overlong-task-comments = true
+max-doc-length = 88
+
+[tool.ruff.flake8-import-conventions]
+[tool.ruff.flake8-import-conventions.aliases]
+"matplotlib.pyplot" = "plt"
+numpy = "np"
+pandas = "pd"
+scipy = "sp"
+seaborn = "sns"
+
+[tool.ruff.isort]
+combine-as-imports = true
+force-sort-within-sections = true
+force-wrap-aliases = true
+relative-imports-order = "closest-to-furthest"
+split-on-trailing-comma = false
+
+
+[tool.black]
+line-length = 88
+skip-string-normalization = true
+
+
+[tool.interrogate]
+color = true
+fail-under = 40
+ignore-init-method = true
+ignore-init-module = false
+ignore-magic = false
+ignore-module = false
+ignore-private = false
+ignore-property-decorators = false
+ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
+ignore-semiprivate = false
+quiet = false
+verbose = 0
+whitelist-regex = []
+
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
