--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,7 +35,6 @@ repos:
         args: [--config-file, mypy.ini]
         language: system
         types: [python]
-        exclude: ^tests/
         stages: [commit, manual]
 
       - id: ruff
@@ -45,9 +44,9 @@ repos:
         types: [python]
         stages: [commit, manual]
 
-      - id: interrogate
-        name: 🔎 interrogate
-        entry: poetry run interrogate
-        language: system
-        types: [python]
-        stages: [commit, manual]
+      # - id: interrogate
+      #   name: 🔎 interrogate
+      #   entry: poetry run interrogate
+      #   language: system
+      #   types: [python]
+      #   stages: [commit, manual]
